# rspack-rsc-examples

./: .gitignore  Cargo.toml  README.md  cli.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js
examples/server/: package.json
examples/server/scripts/: index.ts  module-build-info.ts  react-server-loader.ts  react-server-plugin.ts
examples/server/src/: react-dom-server.tsx  react-server-dom-webpack.d.ts
examples/server/src/app/: client.tsx  index.tsx
src/: index.ts  react-server-dom-webpack.d.ts  react-server.tsx  rspack-env.d.ts
src/app/: index.tsx
src/framework/: entry.client.tsx  entry.rsc.tsx
swc-plugin-react-server/: Cargo.toml  package.json
swc-plugin-react-server/src/: lib.rs  react_server_components.rs
types/: react-server-dom-rspack.d.ts
