[package]
name = "swc-plugin-react-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
regex = "1.11.1"
serde = "1"
serde_json = "1.0.134"
swc_core = { version = "=5.0.1", features = ["ecma_plugin_transform", "__utils"] }

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
